fix issue where context menu could be visible through header and search bar when scrolling quickly (#6030)

--- a/component-lib/app/styles/component-lib/base/application/_application-header.scss
+++ b/component-lib/app/styles/component-lib/base/application/_application-header.scss
@@ -1,8 +1,9 @@
 .rsa-application-header {
   height: 47px;
   position: relative;
-  z-index: 2;
+  @include rsa-layer(controls);
   @include border-bottom(1px, solid, primary, dark);
+  background-color: background-color(primary, darkest);
 
   > a {
     float: left;
